Users and VoteUsers: replace wice_grid

--- a/config/locales/views/users.sv.yml
+++ b/config/locales/views/users.sv.yml
@@ -1,4 +1,11 @@
 sv:
+  admin:
+    users:
+      index:
+        all: Alla användare
+        paginated: Begränsat
+        show_vote_user: Visa mötesanvändare
+
   user:
     account: Konto
     admin_index: Administrera användare
