--- a/config/locales/views/default.sv.yml
+++ b/config/locales/views/default.sv.yml
@@ -1,7 +1,7 @@
 sv:
   add: Lägg till
   add_attr: Lägg till %{attr}
-  admin: Administratör
+  adminstrator: Administratör
   administration: Administration
   back: Tillbaka
   close: Stäng
