Searches: filter presence by both/yes/no

--- a/config/locales/models/vote_user.sv.yml
+++ b/config/locales/models/vote_user.sv.yml
@@ -1,4 +1,11 @@
 sv:
+  model:
+    vote_user:
+      presences:
+        all: Alla
+        not_present: Utjusterade
+        present: Injusterade
+
   activerecord:
     models:
       vote_user: mötesanvändare
