--- a/config/locales/defaults/helpers.sv.yml
+++ b/config/locales/defaults/helpers.sv.yml
@@ -1,8 +1,7 @@
+---
 sv:
   helpers:
     submit:
-      create: "Skapa %{model}"
-      submit: "Spara %{model}"
-      update: "Uppdatera %{model}"
-      nomination:
-        create: Skicka %{model}
+      create: Skapa %{model}
+      submit: Spara %{model}
+      update: Uppdatera %{model}
