--- a/config/locales/defaults/errors.sv.yml
+++ b/config/locales/defaults/errors.sv.yml
@@ -1,3 +1,4 @@
+---
 sv:
   errors:
     format: "%{message}"
@@ -12,7 +13,7 @@ sv:
       greater_than: måste vara större än %{count}
       greater_than_or_equal_to: måste vara större än eller lika med %{count}
       inclusion: finns inte i listan
-      invalid: har fel format
+      invalid: är inte giltligt
       less_than: måste vara mindre än %{count}
       less_than_or_equal_to: måste vara mindre än eller lika med %{count}
       not_a_number: är inte ett nummer
@@ -20,13 +21,11 @@ sv:
       odd: måste vara udda
       record_invalid: 'Ett fel uppstod: %{errors}'
       taken: används redan
+      template:
+        body: 'Det var problem med följande fält:'
+        header:
+          one: Ett fel förhindrade denna %{model} från att sparas
+          other: "%{count} fel förhindrade denna %{model} från att sparas"
       too_long: är för lång (maximum är %{count} tecken)
       too_short: är för kort (minimum är %{count} tecken)
       wrong_length: har fel längd (ska vara %{count} tecken)
-      invalid-url: Inte en giltig webadress
-
-    template:
-      body: 'Det var problem med följande fält:'
-      header:
-        one: Ett fel förhindrade denna %{model} från att sparas
-        other: "%{count} fel förhindrade denna %{model} från att sparas"
