--- a/config/locales/views_controllers/users.sv.yml
+++ b/config/locales/views_controllers/users.sv.yml
@@ -1,3 +1,4 @@
+---
 sv:
   admin:
     users:
@@ -5,50 +6,37 @@ sv:
         all: Alla användare
         paginated: Begränsat
         show_vote_user: Visa mötesanvändare
-
   user:
     account: Konto
     admin_index: Administrera användare
     agree_to_terms: Genom att registrera ett konto accepterar du våra
-    asterix_hidden: Fält markerade med * visas endast för funktionärer vid t.ex. Hilbert Café
-    change_state: Justera in/ut
     check_email_to_confirm: Vänlig kontrollera om du fått ett epost %{date} med en länk för att bekräfta din e-postadress.
-    confirm: Bekräfta
     confirm_card_number: Kontrollera att kortnumret är korrekt, kan endast ändras av administratör.
-    edit: Redigera kontouppgifter
-    email_confirmed: Din e-postadress är bekräftad.
     email_format: Endast epost kopplad till skolan är godkänd, t.ex. tfy15hal@student.lu.se.
-    make_all_not_present: Justera ut alla användare
-    make_not_present: Justera ut
-    make_present: Justera in
-    manage: Hantera användare
-    not_confirmed: Ej bekräftad
-    password: Lösenord
-    profile: Användare
-    your_status: Din status
-    read_terms: Användarvillkoren kan alltid hittas under menyn Information.
-    terms: Användarvillkor
-
     mailer:
       before_starting: Innan allting fungerar som det ska måste du bekräfta ditt konto, via nedanstående länk, och sedan fylla i ditt Mecenatkortsnummer efter inloggning.
       change_password: Byt lösenord
       enjoy: Hoppas att ni ska trivas här på webbplatsen under mötet.
-      hello: "Hej %{user}!"
+      hello: Hej %{user}!
       please_confirm: Vänligen bekräfta ditt konto
       problem: Har ni några problem får ni väldigt gärna kontakta Röstiga genom att svara på detta epost.
       registered: Varmt välkommen till denna webbplats, du har lyckats registrera ett konto!
       reset_not_you: Var det inte du som efterfrågade detta? Bortse från detta epost.
       reset_problem: Har ni några andra problem får ni gärna kontakta Röstiga via denna adress, skriv ett nytt meddelande så att länken inte skickas runt mer än nödvändigt.
       reset_requested: Någon skickade efter en återställning av ditt lösenord.
-      reset_until: "Fram till %{time} kan du ändra ditt lösenord via nedanstående länk"
-      subject_confirm: "Välkommen till %{url}"
+      reset_until: Fram till %{time} kan du ändra ditt lösenord via nedanstående länk
+      subject_confirm: Välkommen till %{url}
       subject_password: "%{url} - byte av lösenord"
-
-    vote:
-      edit: Redigera mötesanvändare
-      show: Visa mötesanvändare
+    make_not_present: Justera ut
+    make_present: Justera in
+    not_confirmed: Ej bekräftad
+    password: Lösenord
+    profile: Användare
+    read_terms: Användarvillkoren kan alltid hittas under menyn Information.
+    terms: Användarvillkor
     visibility:
-      name: Kan ses av justerare, sekreterare, mötesordförande och administratörer. Syns även i mötesprotokollets närvarolista.
-      email: Kan endast ses av administratörer.
-      password: Lagras aldrig i klartext, kan inte ses av någon.
       card_number: Kan endast ses av justerare, sekreterare, mötesordförande och administratörer. <br> Måste vara på formatet 6122-6122-6122-6122
+      email: Kan endast ses av administratörer.
+      name: Kan ses av justerare, sekreterare, mötesordförande och administratörer. Syns även i mötesprotokollets närvarolista.
+      password: Lagras aldrig i klartext, kan inte ses av någon.
+    your_status: Din status
