Agenda: set current item
- Adds database constraint to force only one current item.
- Adds controller for handling setting and unsetting current item.
- One spec failing until integrated with votes

--- a/config/locales/models/sub_item.sv.yml
+++ b/config/locales/models/sub_item.sv.yml
@@ -11,5 +11,13 @@ sv:
         other: Underpunkter
   model:
     sub_item:
+      close: Stäng
       errors:
+        already_one_current: Det finns redan en öppen dagordningspunkt.
         count_not_allowed: Ej tillåtet att lägga till underpunkter
+      reopen: Öppna igen
+      set_current: Öppna
+      statuses:
+        closed: Stängd
+        current: Öppen
+        future: Framtida
