--- a/config/locales/views_controllers/layouts.sv.yml
+++ b/config/locales/views_controllers/layouts.sv.yml
@@ -8,7 +8,6 @@ sv:
         why_email: Du får detta e-post eftersom du varit inne på Röstsystems webbplats och använt någon av våra tjänster.
     menu:
       about: Om
-      administrate: Administrera
       agenda: Dagordning
       contact: Kontakt
       documents: Dokument
@@ -16,5 +15,7 @@ sv:
       terms: Användarvillkor
       votes: Voteringar
       voting: Röstning
-    topbar:
+    navbar:
       settings: Kontoinställningar
+    admin_dropdown:
+      administrate: Administrera
