Documents: use items
- Removes documents from Agenda
- Remove public and categories from Documents

--- a/config/locales/views_controllers/documents.sv.yml
+++ b/config/locales/views_controllers/documents.sv.yml
@@ -1,6 +1,10 @@
 ---
 sv:
-  document:
+  admin:
+    documents:
+      index:
+        title: Administrera dokument
+  documents:
     admin:
       index: Administrera dokument
     all_categories: Alla kategorier
