Documents: adds controllers and specs

--- a/config/locales/views_controllers/sub_items.sv.yml
+++ b/config/locales/views_controllers/sub_items.sv.yml
@@ -8,7 +8,9 @@ sv:
         success: Underpunkten raderades (men kan återställas av administratörer).
       edit:
         destroy: Förinta underpunkt
+        documents: Dokument
         edit_item: Redigera huvudpunkt
+        new_document: Nytt dokument
         title_for: Redigera underpunkt till %{item}
       new:
         edit_item: Redigera huvudpunkt
