--- a/config/locales/views_controllers/documents.sv.yml
+++ b/config/locales/views_controllers/documents.sv.yml
@@ -2,16 +2,10 @@
 sv:
   admin:
     documents:
-      index:
-        title: Administrera dokument
-  documents:
-    admin:
-      index: Administrera dokument
-    all_categories: Alla kategorier
-    categories: Kategorier
-    destroy: Förinta dokument
-    edit: Redigera dokument
-    index: Alla dokument
-    new: Nytt dokument
-    show: Visa dokument
-    title: Dokument
+      success:
+        new_document: Nytt dokument
+      edit:
+        edit_document: Redigera dokument
+
+      table:
+        confirm_remove: Vill du verkligent ta bort dokumentet %{title}?
