--- a/config/locales/views_controllers/attendances.sv.yml
+++ b/config/locales/views_controllers/attendances.sv.yml
@@ -8,3 +8,7 @@ sv:
         manage_users: Hantera användare
         manage_voting: Hantera voteringar
         title: Närvarolista
+
+      destroy_all:
+        error: Utjustering av alla mötesdeltagare lyckades inte
+        success: Utjustering av alla mötesdeltagare lyckades
