Votes: refactor views to use sub_items

--- a/config/locales/models/sub_item.sv.yml
+++ b/config/locales/models/sub_item.sv.yml
@@ -15,6 +15,7 @@ sv:
       errors:
         already_one_current: Det finns redan en öppen dagordningspunkt.
         count_not_allowed: Ej tillåtet att lägga till underpunkter
+        vote_open: Dagordningspunkten har en öppen omröstning.
       reopen: Öppna igen
       set_current: Öppna
       statuses:
