--- a/config/locales/views_controllers/votes.sv.yml
+++ b/config/locales/views_controllers/votes.sv.yml
@@ -2,6 +2,18 @@
 sv:
   admin:
     votes:
+      create:
+        success: Voteringen skapades.
+      destroy:
+        success: Voteringen raderades (men kan återställas av administratör).
+      edit:
+        all_votes: Administrera voteringar
+        cannot_edit: Voteringen är öppen och kan därmed inte redigeras
+        show: Visa votering
+        title: Redigera votering
+      form:
+        add_option: Lägg till alternativ
+        options: Alternativ
       index:
         confirm_remove: Är du säker på att du vill ta bort %{title}?
         manage_agenda: Hantera dagordning
@@ -10,28 +22,41 @@ sv:
         open_close: Öppna/stäng
         title: Administrera voteringar
       new:
+        all_votes: Administrera Voteringar
         title: Ny votering
+      show:
+        2_3_majority: För 2/3 majoritet krävs
+        all_votes: Administrera voteringar
+        confirm_reset: Är du helt säker på att du vill nollställa voteringen?
+        edit_vote: Redigera
+        number_of_votes: Röster / Injusterade
+        reset_vote: Nollställ
+        results: Resultat
+        simple_majority: För enkel majoritet krävs
+        status: Status
+        still_open: Voteringen har ännu inte avslutats. Resultatet kommer att visas här när voteringen har stängts. Följande alternativ finns
+        sum_votes_blank: Σ röster / Σ blanka
+        title: Administrera votering
+      status:
+        automatic_refresh: Uppdateras automatiskt var 15 sekund.
+        current_vote: Aktuell omröstning
+        current_vote_missing: Ingen omröstning öppen
+        present_users: Antal injusterade
+      update:
+        cannot_edit: Voteringen är öppen och kan därmed inte redigeras
+        success: Voteringen uppdaterades.
   vote:
-    2_3_majority: För 2/3 majoritet krävs
     add_option: Lägg till
-    admin_votes: Administrera voteringar
     already_voted: Du har redan deltagit i omröstningen
-    automatic_refresh: Uppdateras automatiskt var 15 sekund.
-    cannot_edit: Voteringen är öppen och kan därmed inte redigeras
     cannot_reset: Voteringen är öppen och kan därmed inte nollställas
-    confirm_reset: Är du helt säker på att du vill nollställa voteringen?
-    current: Aktuell omröstning
-    current_missing: Ingen omröstning öppen
     deleted: " [RADERAD]"
     do_close: Stäng
     do_open: Öppna
-    edit: Redigera
     edit_vote: Redigera votering
     is_closed: Omröstningen är stängd
     made_closed: Stängdes
     made_open: Öppnades
     no_votes_open: Just nu finns det tyvärr ingen votering som är öppen.
-    number_of_votes: Röster / Injusterade
     open: Öppen
     options: Alternativ
     reopen: |-
@@ -40,14 +65,13 @@ sv:
     reset: Nollställ
     reset_failed: Det gick inte att nollställa voteringen
     reset_ok: Voteringen nollställdes
-    results: Resultat
     show: Visa votering
     show_title: Votering
-    simple_majority: För enkel majoritet krävs
-    status: Status
-    still_open: Voteringen har ännu inte avslutats. Resultatet kommer att visas här när voteringen har stängts. Följande alternativ finns
     submit: Rösta!
     sum_is_wrong: " Resultatet stämmer inte"
-    sum_votes_blank: Σ röster / Σ blanka
     title: Voteringar
     wrong_agenda: Voteringen kan enbart öppnas under den valda dagordningspunkten
+  votes:
+    index:
+      current: Aktuell omröstning
+      title: Voteringar
