--- a/config/locales/views_controllers/application.sv.yml
+++ b/config/locales/views_controllers/application.sv.yml
@@ -3,11 +3,18 @@ sv:
   application:
     admin_dropdown:
       administrate: Administrera
-    copyright:
-      developed_at: Utvecklad vid
+      agenda: Dagordning
+      vote_users: Mötesanvändare
+    admin_sidebar:
+      manage_agenda: Dagordning
+      manage_users: Mötesanvändare
+      manage_votes: Omröstningar
+      quick_adjustments: Snabbjustering
     email:
       footer:
         why_email: Du får detta e-post eftersom du varit inne på Röstsystems webbplats och använt någon av våra tjänster.
+    footer:
+      developed_at: Utvecklad vid
     menu:
       about: Om
       agenda: Dagordning
