--- a/config/locales/views_controllers/users.sv.yml
+++ b/config/locales/views_controllers/users.sv.yml
@@ -6,37 +6,31 @@ sv:
         all: Alla användare
         paginated: Begränsat
         show_vote_user: Visa mötesanvändare
-  user:
-    account: Konto
-    admin_index: Administrera användare
-    agree_to_terms: Genom att registrera ett konto accepterar du våra
-    check_email_to_confirm: Vänlig kontrollera om du fått ett epost %{date} med en länk för att bekräfta din e-postadress.
-    confirm_card_number: Kontrollera att kortnumret är korrekt, kan endast ändras av administratör.
-    email_format: Endast epost kopplad till skolan är godkänd, t.ex. tfy15hal@student.lu.se.
-    mailer:
-      before_starting: Innan allting fungerar som det ska måste du bekräfta ditt konto, via nedanstående länk, och sedan fylla i ditt Mecenatkortsnummer efter inloggning.
-      change_password: Byt lösenord
-      enjoy: Hoppas att ni ska trivas här på webbplatsen under mötet.
-      hello: Hej %{user}!
-      please_confirm: Vänligen bekräfta ditt konto
-      problem: Har ni några problem får ni väldigt gärna kontakta Röstiga genom att svara på detta epost.
-      registered: Varmt välkommen till denna webbplats, du har lyckats registrera ett konto!
-      reset_not_you: Var det inte du som efterfrågade detta? Bortse från detta epost.
-      reset_problem: Har ni några andra problem får ni gärna kontakta Röstiga via denna adress, skriv ett nytt meddelande så att länken inte skickas runt mer än nödvändigt.
-      reset_requested: Någon skickade efter en återställning av ditt lösenord.
-      reset_until: Fram till %{time} kan du ändra ditt lösenord via nedanstående länk
-      subject_confirm: Välkommen till %{url}
-      subject_password: "%{url} - byte av lösenord"
-    make_not_present: Justera ut
-    make_present: Justera in
-    not_confirmed: Ej bekräftad
-    password: Lösenord
-    profile: Användare
-    read_terms: Användarvillkoren kan alltid hittas under menyn Information.
-    terms: Användarvillkor
-    visibility:
-      card_number: Kan endast ses av justerare, sekreterare, mötesordförande och administratörer. <br> Måste vara på formatet 6122-6122-6122-6122
-      email: Kan endast ses av administratörer.
-      name: Kan ses av justerare, sekreterare, mötesordförande och administratörer. Syns även i mötesprotokollets närvarolista.
-      password: Lagras aldrig i klartext, kan inte ses av någon.
-    your_status: Din status
+  users:
+    account:
+      check_email_to_confirm: Vänlig kontrollera om du fått ett epost %{date} med en länk för att bekräfta din e-postadress.
+      title: Konto
+    confirm_information:
+      card_number_not_present: Kortnummer ej angivet
+      card_number_present: Kortnummer angivet
+      your_status: Din status
+    password:
+      title: Lösenord
+    show:
+      card_number_info: Kan endast ses av justerare, sekreterare, mötesordförande och administratörer. <br> Måste vara på **formatet 6122-6122-6122-6122**.
+      confirm_card_number: Kontrollera att kortnumret är korrekt, kan endast ändras av administratör.
+      submit_card_number: Spara kortnummer
+      title: Användare
+    sidebar:
+      account: Konto
+      password: Lösenord
+      root: Startsida
+      user: Användare
+    update:
+      success: Ditt kortnummer uppdaterades.
+    update_account:
+      password_required: Du måste fylla i ditt tidigare lösenord.
+      success: Ditt konto uppdaterades.
+    update_password:
+      password_required: Du måste fylla i ditt tidigare lösenord.
+      success: Ditt lösenord uppdaterades.
