Cleanup css, views and locales
- Use lazy lookup I18n
- Use utilities to remove css components

--- a/config/locales/models/vote_user.sv.yml
+++ b/config/locales/models/vote_user.sv.yml
@@ -19,3 +19,5 @@ sv:
       state:
         not_present: Utjusterad
         present: Injusterad
+      make_not_present: Justera ut
+      make_present: Justera in
