--- a/config/locales/views_controllers/sub_items.sv.yml
+++ b/config/locales/views_controllers/sub_items.sv.yml
@@ -6,11 +6,12 @@ sv:
         success: Underpunkten skapades.
       destroy:
         success: Underpunkten raderades (men kan återställas av administratörer).
+      documents:
+        documents: Dokument
+        new_document: Nytt dokument
       edit:
         destroy: Förinta underpunkt
-        documents: Dokument
         edit_item: Redigera huvudpunkt
-        new_document: Nytt dokument
         title_for: Redigera underpunkt till %{item}
       new:
         edit_item: Redigera huvudpunkt
